avoid horizontal scroll and flex used for designing carousel

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+}
+
+.scrollbar-hidden {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.movie-card{
+    flex-basis: 10%;
+}
